--- a/StepCounter/app/build.gradle
+++ b/StepCounter/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt' // add this line in file build.gradle (Module : YourAppName)
+
 }
 
 
@@ -59,6 +60,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
     implementation 'com.mikhaellopez:circularimageview:4.1.1'
+    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
@@ -82,3 +85,4 @@ dependencies {
 
 
 }
+apply plugin: 'com.google.gms.google-services'
